# warrior_object_tracking

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cfg/: plot_eval.txt  policy.txt  run_eval.txt  run_live.txt  run_video.txt
data/: result.csv
data/gt/: challenge1_occlusion_v1.1.xml  challenge2_distance_variation_v1.1.xml  challenge3_fast_motion_v1.1.xml  challenge4_stress_test_v1.1.xml
include/app/: config.hpp  tracking_utils.hpp
include/detector/: yolo_detector.hpp
include/tracker/: colornames_lut.hpp  csrt_tracker.hpp  kcf_local.hpp  kcf_tracker.hpp
src/: main.cpp  main_eval.cpp  main_video.cpp
src/detector/: yolo_detector.cpp
src/tracker/: colornames_lut.cpp  csrt_tracker.cpp  kcf_local.cpp  kcf_tracker.cpp
tools/: plot_eval.py
